# misor

./: manage.py  pyproject.toml
src/: manage.py
src/django_package/: asgi.py  settings.py  urls.py  wsgi.py
src/mis/: models.py  tests.py
src/mis/migrations/: 0001_initial.py  0002_teacher.py
src/misor/: asgi.py  settings.py  urls.py  wsgi.py
src/misor_core/: main.py  middlewares.py  utils.py  views.py
src/misor_core/management/commands/: misor.py
src/misor_core/templates/: base.html  create.html  dashboard.html  field.html  list.html  view.html
src/products/: admin.py  forms.py  tests.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/products/templates/: product_formset.html  product_list.html
src/users/migrations/: 0001_initial.py
