[tool.poetry]
name = "misor"
version = "0.1.0"
description = "Build your MIS in no time."
authors = ["Rashid <rashidstanikzai.net@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
